A few conditions, need to do the rest